ajuste de nomes

--- a/Trabalho-IMC/Trabalho-IMC.vcxproj
+++ b/Trabalho-IMC/Trabalho-IMC.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="luan_emanuel_trabalho_imc.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
